[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets Mario/sounds/smw_jump.wav" type="AudioStream" id=1]
[ext_resource path="res://Cenas/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_idle.tres" type="Texture" id=3]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_0.tres" type="Texture" id=4]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_jump_1.tres" type="Texture" id=5]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_1.tres" type="Texture" id=6]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_walk_0.tres" type="Texture" id=7]
[ext_resource path="res://Assets Mario/AtlasTexture/moeda.tres" type="Texture" id=8]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_dead.tres" type="Texture" id=9]
[ext_resource path="res://Assets Mario/AtlasTexture/mario_dead_2.tres" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Animacao:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacao:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ), Vector2( 0, 200 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Animacao" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "dead"

[node name="Colisao" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AudioPulo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Notificador" type="VisibilityNotifier2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -100 )
current = true

[node name="Sprite" type="Sprite" parent="Camera"]
position = Vector2( -435, -239 )
scale = Vector2( 0.488235, 0.441176 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Camera"]
modulate = Color( 0.819608, 0.12549, 0.113725, 1 )
self_modulate = Color( 0.815686, 0.133333, 0.133333, 1 )
margin_left = -447.0
margin_top = -262.0
margin_right = -406.0
margin_bottom = -245.0
rect_scale = Vector2( 3, 3 )
text = "0"
align = 1
valign = 1

[node name="Hitbox" type="Area2D" parent="."]

[node name="colisao" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="screen_exited" from="Notificador" to="." method="_on_Notificador_screen_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
